namespace Cookies.Runtime.Domain
{
    public class CookieBox
    {
        int aklsdjsd = 1;
        public int Cookies { get; private set; }

        public void AddOnce()
        {
            Cookies += aklsdjsd;
        }
    }
}